Current development version (1.0-SNAPSHOT)

- Added CLKernel.setLocalArg(argIndex, localArgByteLength)
- Allow localWorkSizes to be null in enqueueNDRange
- Added support for barriers and markers in CLQueue
- Fixed issue #2 : enqueueNDRange does not work for nDim > 1
- Added CLDevice.getMaxWorkItemSizes()
- CLDevice.toString() now only prints the name

Version 1.0-beta-1

- New CLPlatform class (~ OpenCL implementation) which now hosts the list*Devices(...) methods 
- Entry point of library is now OpenCL4Java.listPlatforms() 
- New CLEvent class, returned by all enqueue* methods (with methods waitFor, invokeUponCompletion...) 
- Better separation between blocking and non blocking calls 
- New CLSampler class supported as argument of CLKernel 
- Many info getters with typesafe enums / enum sets in classes CLDevice, CLPlatform, CLKernel... 
- Much more complete JavaDoc : http://nativelibs4java.sourceforge.net/sites/OpenCL4Java/apidocs/ 
- Example & benchmark classes became JUnit tests and moved here : http://code.google.com/p/nativelibs4java/source/browse/#svn/trunk/lib... 

While this release is rather OpenCL4Java-focused, ScalaCL also got its bunch of enhancements : 
- Added scalar variables IntVar, FloatVar, ShortVar... 
- 'local' keyword can be added to variables so they're local to the programs : val x = FloatVar local 
- Added many OpenCL math functions 
- Added methods ArrayVar.write(Range), ArrayVar.write(Seq) 
- Various bugfixes 
