@@ -6,6 +6,7 @@ Current development version (1.0-SNAPSHOT)
 - Fixed issue #2 : enqueueNDRange does not work for nDim > 1
 - Added CLDevice.getMaxWorkItemSizes()
 - CLDevice.toString() now only prints the name
+- Moved method createContext from CLContext to OpenCL4Java
 
 Version 1.0-beta-1
 
